--- a/analysis/ash_stages.Rmd
+++ b/analysis/ash_stages.Rmd
@@ -77,5 +77,5 @@ Now the full output takes more than half the elapsed time, and about half the us
 
 ## Session information
 
-```{r info, echo = FALSE}
+```{r session-info, echo = FALSE}
 ```
