--- a/analysis/demo_logistic.Rmd
+++ b/analysis/demo_logistic.Rmd
@@ -4,6 +4,42 @@ author: "Peter Carbonetto"
 date: "2017-01-24"
 ---
 
+## SCRIPT PARAMETERS
+
+```{r settings}
+p     <- 100   # Number of covariates.
+n     <- 2000  # Number of samples.
+beta0 <- (-2)  # Intercept.
+
+# Non-zero coefficients.
+beta.nonzero <- c(1,-1,-1,1)
+
+# Initialize the sequence of pseudorandom numbers.
+set.seed(1)
+```
+
+## GENERATE DATA SET
+
+```{r gen_data}
+
+# Generate the ground-truth regression coefficients.
+beta <- rep(0,p)
+beta[sample(p,length(beta.nonzero))] <- beta.nonzero
+
+# Generate the design matrix.
+X <- matrix(rnorm(n*p),n,p)
+
+# Center the columns of X.
+rep.row <- function (x, n)
+  matrix(x,n,length(x),byrow = TRUE)
+X <- X - rep.row(colMeans(X),n)
+
+# Generate the binary responses.
+sigmoid <- function (x)
+  1/(1 + exp(-x))
+y <- as.numeric(runif(n) < sigmoid(beta0 + X %*% beta))
+```
+
 ## Session information.
 
 ```{r session_info}
